add test logback config (#27)
* add test logback config

* update version to 1.4.1

Co-authored-by: Rodolfo Viti <rodolfo.viti@nttdata.com>